Changed svg for google's svgs

--- a/owner/owner-client/src/app/_components/folder-window/file-item/file-item.component.html
+++ b/owner/owner-client/src/app/_components/folder-window/file-item/file-item.component.html
@@ -1,6 +1,6 @@
 <div class="main-wrapper" matTooltip="neka deskripcija za fajl">
     <button mat-icon-button color="accent" type="button">
-        <mat-icon svgIcon="file"></mat-icon>
+        <mat-icon>insert_drive_file</mat-icon>
     </button>
 
     <div class="info-wrapper" [matMenuTriggerFor]="menu">
