--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification-btn.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification-btn.component.html
@@ -1,6 +1,6 @@
 <div class="main-wrapper" *ngIf="notificationMenu">
   <button type="button" mat-icon-button (click)="openNotifications = !openNotifications">
-    <mat-icon svgIcon="notification" matBadge="{{ notificationMenu.notSeenNumber }}" aria-hidden="false"></mat-icon>
+    <mat-icon matBadge="{{ notificationMenu.notSeenNumber }}" aria-hidden="false" >notifications</mat-icon>
   </button>
 
   <div class="notifications-menu-wrapper" *ngIf="openNotifications">
