--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification/notification.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification/notification.component.html
@@ -4,7 +4,7 @@
     {{ notification.description }}
   </div>
   <div class="time">
-    <mat-icon svgIcon="clock" class="svg"></mat-icon>
+    <mat-icon inline>schedule</mat-icon>
     2 days ago
   </div>
 
