--- a/owner/owner-client/src/app/_components/menu-card/menu-card.component.html
+++ b/owner/owner-client/src/app/_components/menu-card/menu-card.component.html
@@ -33,7 +33,7 @@
     <div class="footer-wrapper center">
       <div class="number-of-items center">
         <div>{{ menu.menuItemNumber }}</div>
-        <mat-icon svgIcon="restaurant" class="svg"></mat-icon>
+        <mat-icon inline class="svg">restaurant</mat-icon>
       </div>
       <div class="restaurant-name">
         {{ menu.restaurantName }}
