--- a/owner/owner-client/src/app/_layouts/account/account-edit/account-edit.component.html
+++ b/owner/owner-client/src/app/_layouts/account/account-edit/account-edit.component.html
@@ -115,7 +115,7 @@
         color="accent"
         (click)="profileBtn.click()"
       >
-        <mat-icon svgIcon="image"></mat-icon>
+        <mat-icon>image</mat-icon>
         Profile Image
       </button>
 
@@ -129,7 +129,7 @@
       />
 
       <button mat-raised-button color="primary">
-        <mat-icon svgIcon="save"></mat-icon>
+        <mat-icon>save</mat-icon>
         Save
       </button>
     </div>
