--- a/owner/owner-client/src/app/_layouts/account/account-info/account-info.component.html
+++ b/owner/owner-client/src/app/_layouts/account/account-info/account-info.component.html
@@ -54,7 +54,7 @@
       <div class="description-btn-wrapper">
         <div class="description-btn">
           <button type="button" mat-icon-button>
-            <mat-icon svgIcon="users"></mat-icon>
+            <mat-icon>groups</mat-icon>
           </button>
           <div>{{ account.employeesNumber }}</div>
           <div>Employees</div>
@@ -62,7 +62,7 @@
 
         <div class="description-btn">
           <button type="button" mat-icon-button>
-            <mat-icon svgIcon="restaurant"></mat-icon>
+            <mat-icon>restaurant</mat-icon>
           </button>
           <div>{{ account.restaurantsNumber }}</div>
           <div>Restaurant</div>
@@ -70,7 +70,7 @@
 
         <div class="description-btn">
           <button type="button" mat-icon-button>
-            <mat-icon svgIcon="menu"></mat-icon>
+            <mat-icon>menu_book</mat-icon>
           </button>
           <div>{{ account.menusNumber }}</div>
           <div>Menus</div>
@@ -78,7 +78,7 @@
 
         <div class="description-btn">
           <button type="button" mat-icon-button>
-            <mat-icon svgIcon="bullhorn"></mat-icon>
+            <mat-icon>local_cafe</mat-icon>
           </button>
           <div>{{ account.todayOrdersNumber }}</div>
           <div>Today Orders</div>
