--- a/owner/owner-client/src/app/_layouts/employees/employees-edit/employees-edit.component.html
+++ b/owner/owner-client/src/app/_layouts/employees/employees-edit/employees-edit.component.html
@@ -85,7 +85,7 @@
     <div class="btn-wrapper">
 
       <button type="button" mat-raised-button color="accent" (click)="employeeProfile.click()">
-        <mat-icon svgIcon="image"></mat-icon>
+        <mat-icon>image</mat-icon>
         Change Profile Picture
       </button>
 
@@ -93,7 +93,7 @@
         (change)="onUploadProfilePicture($event)">
 
       <button mat-raised-button color="primary">
-        <mat-icon svgIcon="save"></mat-icon>
+        <mat-icon>save</mat-icon>
         Save
       </button>
     </div>
