--- a/owner/owner-client/src/app/_layouts/menus/menu-item-create/menu-item-create.component.html
+++ b/owner/owner-client/src/app/_layouts/menus/menu-item-create/menu-item-create.component.html
@@ -45,7 +45,7 @@
           color="accent"
           (click)="imageBtn.click()"
         >
-          <mat-icon svgIcon="image"></mat-icon>
+          <mat-icon>image</mat-icon>
           Add Image
         </button>
 
@@ -85,7 +85,7 @@
           color="primary"
           [disabled]="menuItemForm.invalid"
         >
-          <mat-icon svgIcon="save"></mat-icon>
+          <mat-icon>save</mat-icon>
           Save
         </button>
       </div>
