--- a/owner/owner-client/src/app/_layouts/menus/menus-edit/menus-edit.component.html
+++ b/owner/owner-client/src/app/_layouts/menus/menus-edit/menus-edit.component.html
@@ -33,7 +33,7 @@
           [disabled]="menuForm.invalid"
           (click)="onSubmit()"
         >
-          <mat-icon svgIcon="save"></mat-icon>
+          <mat-icon>save</mat-icon>
           Save
         </button>
       </div>
