--- a/owner/owner-client/src/app/_layouts/restaurants/restaurants-edit/restaurants-edit.component.html
+++ b/owner/owner-client/src/app/_layouts/restaurants/restaurants-edit/restaurants-edit.component.html
@@ -88,7 +88,7 @@
         placeholder="Enter website url"
         formControlName="websiteUrl"
       />
-      <mat-icon matPrefix svgIcon="globe"></mat-icon>
+      <mat-icon matPrefix>public</mat-icon>
     </mat-form-field>
   </div>
   <div class="description-wrapper">
@@ -126,7 +126,7 @@
         class="input-wrapper"
         (click)="profilePhotoBtn.click()"
       >
-        <mat-icon svgIcon="image"></mat-icon>
+        <mat-icon>image</mat-icon>
         Add Profile Image
       </button>
 
@@ -146,7 +146,7 @@
         class="input-wrapper"
         (click)="photosBtn.click()"
       >
-        <mat-icon svgIcon="images"></mat-icon>
+        <mat-icon>photo_library</mat-icon>
         Restaurant Images
       </button>
 
@@ -160,7 +160,7 @@
       />
 
       <button mat-raised-button color="primary" class="input-wrapper">
-        <mat-icon svgIcon="save"></mat-icon>
+        <mat-icon>save</mat-icon>
         Save
       </button>
     </div>
