--- a/owner/owner-client/src/app/_components/folder-window/folder-item/folder-item.component.html
+++ b/owner/owner-client/src/app/_components/folder-window/folder-item/folder-item.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="folder" class="main-wrapper" matTooltip="{{ folder.description }}">
     <button type="button" mat-icon-button (click)="onOpenFolder()">
-        <mat-icon svgIcon="folder"></mat-icon>
+        <mat-icon>folder</mat-icon>
     </button>
     <div class="info-wrapper" [matMenuTriggerFor]="menu">
         <div class="folder-name">{{ folder.name }}</div>
