--- a/owner/owner-client/src/app/_components/image-with-delete/image-with-delete-full-screen/image-with-delete-full-screen.component.html
+++ b/owner/owner-client/src/app/_components/image-with-delete/image-with-delete-full-screen/image-with-delete-full-screen.component.html
@@ -1,6 +1,6 @@
 <div class="dialog-wrapper">
   <button mat-icon-button (click)="onClose()">
-    <mat-icon svgIcon="xmark"></mat-icon>
+    <mat-icon>cancel</mat-icon>
   </button>
   <div class="spinner-wrapper" *ngIf="isLoading">
     <mat-spinner color="primary"></mat-spinner>
