--- a/owner/owner-client/src/app/_components/image-with-delete/image-with-delete.component.html
+++ b/owner/owner-client/src/app/_components/image-with-delete/image-with-delete.component.html
@@ -8,7 +8,7 @@
 >
   <mat-chip class="is-profile-chip" *ngIf="isMain">Profile picture</mat-chip>
   <button mat-icon-button color="warn" type="button" (click)="onDelete($event)">
-    <mat-icon svgIcon="delete"></mat-icon>
+    <mat-icon>delete</mat-icon>
   </button>
   <div class="spinner-wrapper" *ngIf="isLoading">
     <mat-spinner
