--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
@@ -3,25 +3,22 @@
 </div>
 <div class="side-nav-item-wrapper">
   <app-side-nav-item [name]="'home'" [url]="'/home'">
-    <mat-icon svgIcon="home" class="svg"></mat-icon>
+    <mat-icon class="svg">home</mat-icon>
   </app-side-nav-item>
   <app-side-nav-dropdown
     [name]="'restaurants'"
     [itemListObj]="restaurantsLinkItems"
   >
-    <mat-icon class="svg" svgIcon="restaurant"></mat-icon>
+    <mat-icon class="svg">restaurant</mat-icon>
   </app-side-nav-dropdown>
   <app-side-nav-dropdown
     [name]="'employees'"
     [itemListObj]="employeesLinkItems"
   >
-    <mat-icon class="svg" svgIcon="users"></mat-icon>
+    <mat-icon class="svg">group</mat-icon>
   </app-side-nav-dropdown>
 
-  <app-side-nav-dropdown
-    [name]="'menus'"
-    [itemListObj]="menusLinkItems"
-  >
-    <mat-icon class="svg" svgIcon="menu"></mat-icon>
+  <app-side-nav-dropdown [name]="'menus'" [itemListObj]="menusLinkItems">
+    <mat-icon class="svg">menu_book</mat-icon>
   </app-side-nav-dropdown>
 </div>
