--- a/owner/owner-client/src/app/_components/restaurant-card/restaurant-card.component.html
+++ b/owner/owner-client/src/app/_components/restaurant-card/restaurant-card.component.html
@@ -18,15 +18,15 @@
       <mat-icon
         *ngIf="restaurant.isOpen"
         matTooltip="{{ restaurant.name }} is open"
-        svgIcon="open"
-        style="color: green"
-      ></mat-icon>
+        style="color: var(--success)"
+        >lock_open</mat-icon
+      >
       <mat-icon
         *ngIf="!restaurant.isOpen"
-        matTooltip="{{ restaurant.name }} is closed"
-        svgIcon="close"
-        style="color: red"
-      ></mat-icon>
+        matTooltip="{{ restaurant.name }} is close"
+        style="color: var(--warning)"
+        >lock</mat-icon
+      >
     </div>
   </mat-card-header>
   <mat-card-content class="content-wrapper">
@@ -43,7 +43,7 @@
     </button>
   </mat-card-actions>
   <mat-card-footer class="footer-wrapper">
-    <mat-icon svgIcon="earth" class="globe-svg"></mat-icon>
+    <mat-icon class="globe-svg">public</mat-icon>
     <span>{{ restaurant.country }}</span>
   </mat-card-footer>
 </mat-card>
