--- a/owner/owner-client/src/app/_layouts/employees/employees-create/employees-create.component.html
+++ b/owner/owner-client/src/app/_layouts/employees/employees-create/employees-create.component.html
@@ -105,7 +105,12 @@
 
       <mat-form-field appearance="outline" class="input-wrapper">
         <mat-label>Employee birth</mat-label>
-        <input matInput [matDatepicker]="dp3" formControlName="birth" placeholder="12/12/2023" />
+        <input
+          matInput
+          [matDatepicker]="dp3"
+          formControlName="birth"
+          placeholder="12/12/2023"
+        />
         <mat-hint>MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle
           matIconSuffix
@@ -145,7 +150,7 @@
         color="accent"
         (click)="profileBtn.click()"
       >
-        <mat-icon svgIcon="image"></mat-icon>
+        <mat-icon>image</mat-icon>
         Profile photo
       </button>
 
@@ -163,7 +168,7 @@
         color="primary"
         [disabled]="employeeForm.invalid"
       >
-        <mat-icon svgIcon="save"></mat-icon>
+        <mat-icon>save</mat-icon>
         Save
       </button>
     </div>
