--- a/owner/owner-client/src/app/_layouts/menus/menu-item-edit/menu-item-edit.component.html
+++ b/owner/owner-client/src/app/_layouts/menus/menu-item-edit/menu-item-edit.component.html
@@ -25,7 +25,7 @@
 
             <div class="permissions-with-btn">
                 <button type="button" mat-raised-button color="accent" (click)="imageBtn.click()">
-                    <mat-icon svgIcon="image"></mat-icon>
+                    <mat-icon>image</mat-icon>
                     Add Image
                 </button>
 
@@ -45,7 +45,7 @@
                 </mat-form-field>
 
                 <button mat-raised-button color="primary" [disabled]="menuItemForm.invalid">
-                    <mat-icon svgIcon="save"></mat-icon>
+                    <mat-icon>save</mat-icon>
                     Save
                 </button>
             </div>
