Added more ripple efects with light primary color

--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav-dropdown/side-nav-dropdown.component.html
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav-dropdown/side-nav-dropdown.component.html
@@ -1,6 +1,8 @@
 <div
   class="main-wrapper"
   (click)="isOpen = !isOpen"
+  matRipple
+  [matRippleColor]="'var(--primary-light)'"
 >
   <ng-content></ng-content>
   <span>{{ name | titlecase }}</span>
