--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification/notification.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification/notification.component.html
@@ -1,4 +1,4 @@
-<div class="main-wrapper" *ngIf="notification" matRipple [matRippleColor]="'var(--primary)'">
+<div class="main-wrapper" *ngIf="notification" matRipple [matRippleColor]="'var(--primary-light)'">
   <div class="title">{{ notification.title }}</div>
   <div class="description">
     {{ notification.description }}
