--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification-btn.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification-btn.component.html
@@ -1,21 +1,46 @@
 <div class="main-wrapper" *ngIf="notificationMenu">
-  <button type="button" mat-icon-button (click)="openNotifications = !openNotifications">
-    <mat-icon matBadge="{{ notificationMenu.notSeenNumber }}" aria-hidden="false" >notifications</mat-icon>
+  <button
+    type="button"
+    mat-icon-button
+    (click)="openNotifications = !openNotifications"
+  >
+    <mat-icon
+      matBadge="{{ notificationMenu.notSeenNumber }}"
+      aria-hidden="false"
+      >notifications</mat-icon
+    >
   </button>
 
   <div class="notifications-menu-wrapper" *ngIf="openNotifications">
     <div class="header">
       Notifications
       <mat-chip class="chip">{{ notificationMenu.notSeenNumber }} New</mat-chip>
-      <div class="mark-all-as-read" (click)="onAllAsRead()">Mark all as read</div>
+      <div class="mark-all-as-read" (click)="onAllAsRead()">
+        Mark all as read
+      </div>
     </div>
 
     <div class="notifications-wrapper">
-      <ng-container *ngFor="let notification of notificationMenu.notifications; let index=index;">
+      <ng-container
+        *ngFor="
+          let notification of notificationMenu.notifications;
+          let index = index
+        "
+      >
         <app-notification [notification]="notification"></app-notification>
-        <mat-divider *ngIf="index !== notificationMenu.notifications.length"></mat-divider>
+        <mat-divider
+          *ngIf="index !== notificationMenu.notifications.length"
+        ></mat-divider>
       </ng-container>
     </div>
-    <div class="footer">View All Notifications</div>
+    <div
+      class="footer"
+      routerLink="/notifications"
+      (click)="openNotifications = false"
+      matRipple
+      [matRippleColor]="'var(--primary-light)'"
+    >
+      View All Notifications
+    </div>
   </div>
 </div>
