--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification/notification.component.css
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification/notification.component.css
@@ -4,7 +4,7 @@
     cursor: pointer;
     line-height: 25px;
     position: relative;
-    height: 5rem;
+    height: 80px;
 }
 
 .background-wrapper {
