--- a/owner/owner-client/src/app/_components/search-bar/search-bar.component.css
+++ b/owner/owner-client/src/app/_components/search-bar/search-bar.component.css
@@ -1,30 +1,30 @@
-.main-wrapper  {
-    background-color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem 1rem;
-    border-radius: 20px;
-    overflow: hidden;
-    margin: auto;
+.main-wrapper {
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: 20px;
+  overflow: hidden;
+  margin: auto;
+  height: 2.5rem;
 }
 
 .search-svg {
-    color: black;
+  color: black;
 }
 
 .main-wrapper > input {
-    height: 100%;
-    background-color: white;
-    outline: none;
-    border: none;
+  height: 100%;
+  background-color: white;
+  outline: none;
+  border: none;
 }
 
 .main-wrapper-focus {
-    border: 2px solid var(--primary);
+  border: 2px solid var(--primary);
 }
 
-
 .search-svg-focus {
-    color: var(--primary);
+  color: var(--primary);
 }
