--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification/notification.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification/notification.component.html
@@ -1,7 +1,23 @@
-<div class="main-wrapper" *ngIf="notification" matRipple [matRippleColor]="'var(--primary-light)'" (click)="onNotification()">
-  <div class="title">{{ notification.title }}</div>
+<div
+  class="main-wrapper"
+  *ngIf="notification"
+  matRipple
+  [matRippleColor]="'var(--primary-light)'"
+  (click)="onNotification()"
+>
+  <div class="title">
+    {{
+      notification.title.length > 35
+        ? (notification.title | slice : 0 : 35) + "..."
+        : notification.title
+    }}
+  </div>
   <div class="description">
-    {{ notification.description }}
+    {{
+      notification.description.length > 100
+        ? (notification.description | slice : 0 : 100) + "..."
+        : notification.description
+    }}
   </div>
   <div class="time">
     <mat-icon inline>schedule</mat-icon>
