--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/top-nav-buttons.component.css
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/top-nav-buttons.component.css
@@ -1,5 +1,22 @@
 .main-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.menu-wrapper {
     display: flex;
-    align-items: center;
-    gap: 1rem;
+    padding: 0.5rem 1rem;
+}
+
+@media (max-width: 960px) {
+  .main-wrapper {
+    display: none;
+  }
+}
+
+@media (min-width: 959.98px) {
+  .ss-wrapper {
+    display: none;
+  }
 }
