Working on messages

--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/message-btn/message-btn.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/message-btn/message-btn.component.html
@@ -13,17 +13,7 @@
         </div>
     
         <div class="notifications-wrapper">
-          <!-- <ng-container
-            *ngFor="
-              let notification of notificationMenu.notifications;
-              let index = index
-            "
-          >
-            <app-notification [notification]="notification"></app-notification>
-            <mat-divider
-              *ngIf="index !== notificationMenu.notifications.length"
-            ></mat-divider>
-          </ng-container> -->
+          <app-message-menu></app-message-menu>
         </div>
         <div
           class="footer"
