--- a/owner/owner-client/src/app/_components/chat/message/message.component.css
+++ b/owner/owner-client/src/app/_components/chat/message/message.component.css
@@ -2,6 +2,12 @@
   width: 100%;
   padding: 0.5rem;
   display: flex;
+  flex-direction: row;
+}
+
+.main-main-wrapper {
+  flex-direction: row-reverse;
+  background-color: #424242;
 }
 
 .first-col {
