--- a/owner/owner-client/src/app/_components/chat/chat.component.css
+++ b/owner/owner-client/src/app/_components/chat/chat.component.css
@@ -1,25 +1,63 @@
 .main-wrapper {
-  width: 300px;
+  width: 400px;
   border: 1px solid var(--primary);
   border-bottom: none;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  cursor: pointer;
   position: fixed;
   bottom: 0;
   right: 2rem;
 }
 
+.username {
+  display: flex;
+  gap: 1rem;
+}
+
 .header {
-  height: 40px;
+  height: 3rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 2rem;
   font-size: 16px;
+  cursor: pointer;
   border-bottom: 1px solid var(--primary);
 }
 
 .body {
-    height: 50vh;
+    height: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    overflow: hidden;
+}
+
+.message-wrapper {
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  background-color: white;
+}
+
+.input-wrapper {
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  padding: 0 0.5rem;
+}
+
+.input-wrapper > input {
+  width: 100%;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  padding: 0 0.5rem;
+  height: 2rem;
+}
+
+.input-wrapper > input:focus {
+  border: 2px solid var(--primary);
 }
