--- a/owner/owner-client/src/app/_components/chat/message/message.component.html
+++ b/owner/owner-client/src/app/_components/chat/message/message.component.html
@@ -2,7 +2,8 @@
   [ngClass]="{
     'main-wrapper': true,
     'mat-app-background': true,
-    'main-main-wrapper': isMine
+    'main-main-wrapper': isMine,
+    'main-in-menu-btn-wrapper': inMenuBtn
   }"
 >
   <div class="first-col center">
@@ -36,4 +37,5 @@
       </div>
     </div>
   </div>
+  <!-- <div class="background"></div> -->
 </div>
