--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/top-nav-buttons.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/top-nav-buttons.component.html
@@ -1,4 +1,5 @@
 <div class="main-wrapper">
+  <app-message-btn></app-message-btn>
   <app-notification-btn></app-notification-btn>
   <app-account-btn></app-account-btn>
 </div>
@@ -10,15 +11,20 @@
 </div>
 
 <mat-menu #menu="matMenu">
-    <div class="menu-wrapper">
-        <button type="button" mat-icon-button color="primary" routerLink="/account">
-            <mat-icon>account_circle</mat-icon>
-        </button>
-        <button type="button" mat-icon-button color="primary" routerLink="/notifications">
-            <mat-icon>notifications</mat-icon>
-        </button>
-        <button type="button" mat-icon-button color="primary">
-            <mat-icon>logout</mat-icon>
-        </button>
-    </div>
+  <div class="menu-wrapper">
+    <button type="button" mat-icon-button color="primary" routerLink="/account">
+      <mat-icon>account_circle</mat-icon>
+    </button>
+    <button
+      type="button"
+      mat-icon-button
+      color="primary"
+      routerLink="/notifications"
+    >
+      <mat-icon>notifications</mat-icon>
+    </button>
+    <button type="button" mat-icon-button color="primary">
+      <mat-icon>logout</mat-icon>
+    </button>
+  </div>
 </mat-menu>
