--- a/owner/owner-client/src/app/_components/chat/message/message.component.html
+++ b/owner/owner-client/src/app/_components/chat/message/message.component.html
@@ -1,4 +1,5 @@
 <div
+  *ngIf="message"
   [ngClass]="{
     'main-wrapper': true,
     'mat-app-background': true,
@@ -12,22 +13,22 @@
         <mat-spinner></mat-spinner>
       </div>
       <img
-        src="assets/img/profile1.jpg"
+        src="{{
+          message.user.profilePicture || 'assets/img/default-profile.png'
+        }}"
         (load)="isProfileImageLoading = false"
         alt="profile image"
         class="img"
-        matTooltip="zuna21"
+        matTooltip="{{ message.user.username }}"
+        (error)="message.user.profilePicture = 'assets/img/default-profile.png'"
       />
-      <div class="online" matTooltip="active"></div>
+      <div class="online" matTooltip="{{ message.user.isActive }}"></div>
     </div>
   </div>
   <div class="second-col">
     <div class="message-wrapper">
       <div class="message">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum
-        exercitationem hic alias asperiores nam deserunt eos, ducimus aspernatur
-        culpa! Sit nostrum ulla Lorem ipsum dolor sit, amet consectetur
-        adipisicing elit.
+        {{ message.message }}
       </div>
       <div [ngClass]="{ 'message-footer': true, 'main-main-wrapper': isMine }">
         <div class="time">
@@ -37,5 +38,5 @@
       </div>
     </div>
   </div>
-  <!-- <div class="background"></div> -->
+  <div class="background" *ngIf="message.isSeen && inMenuBtn"></div>
 </div>
