--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/message-btn/message-btn.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/message-btn/message-btn.component.html
@@ -1,28 +1,24 @@
-<div class="main-wrapper">
+<div class="main-wrapper" *ngIf="messagesMenu">
   <button type="button" mat-icon-button (click)="openMessages = !openMessages">
-    <mat-icon matBadge="3" aria-hidden="false">chat</mat-icon>
+    <mat-icon matBadge="{{ messagesMenu.notSeenNumber }}" aria-hidden="false"
+      >chat</mat-icon
+    >
   </button>
 
   <div class="notifications-menu-wrapper" *ngIf="openMessages">
     <div class="header">
       Messages
-      <mat-chip class="chip">3 New</mat-chip>
+      <mat-chip class="chip">{{ messagesMenu.notSeenNumber }} New</mat-chip>
       <div class="mark-all-as-read" (click)="onAllAsRead()">
         Mark all as read
       </div>
     </div>
 
     <div class="notifications-wrapper">
-      <app-message [inMenuBtn]="true" (click)="onClick()"></app-message>
-      <mat-divider></mat-divider>
-      <app-message [inMenuBtn]="true"></app-message>
-      <mat-divider></mat-divider>
-      <app-message [inMenuBtn]="true"></app-message>
-      <mat-divider></mat-divider>
-      <app-message [inMenuBtn]="true"></app-message>
-      <mat-divider></mat-divider>
-      <app-message [inMenuBtn]="true"></app-message>
-      <mat-divider></mat-divider>
+      <ng-container *ngFor="let message of messagesMenu.messages">
+        <app-message [inMenuBtn]="true" [message]="message"></app-message>
+        <mat-divider></mat-divider>
+      </ng-container>
     </div>
     <div
       class="footer"
