Can open and close chat

--- a/owner/owner-client/src/app/_components/chat/chat.component.html
+++ b/owner/owner-client/src/app/_components/chat/chat.component.html
@@ -1,34 +1,20 @@
-<div class="main-wrapper">
-  <div
-    class="header"
-    matRipple
-    [matRippleColor]="'var(--primary-light)'"
-    (click)="isOpen = !isOpen"
-  >
-    <div>zuna21</div>
+<div class="main-wrapper" *ngIf="chat">
+  <div class="header" matRipple [matRippleColor]="'var(--primary-light)'" (click)="isOpen = !isOpen">
+    <div>{{ chat.name }}</div>
 
     <button type="button" mat-icon-button (click)="onClose($event)">
       <mat-icon>cancel</mat-icon>
     </button>
   </div>
-  <div
-    class="body"
-    [ngStyle]="{
+  <div class="body" [ngStyle]="{
       height: isOpen ? '50vh' : '0',
       transition: 'height 0.5s ease-in-out'
-    }"
-  >
+    }">
     <div class="message-wrapper">
-      <app-message></app-message>
-      <mat-divider></mat-divider>
-      <app-message [isMine]="true"></app-message>
-      <mat-divider></mat-divider>
-      <app-message></app-message>
-      <mat-divider></mat-divider>
-      <app-message [isMine]="true"></app-message>
-      <mat-divider></mat-divider>
-      <app-message></app-message>
-      <mat-divider></mat-divider>
+      <ng-container *ngFor="let message of chat.messages">
+        <app-message [message]="message"></app-message>
+        <mat-divider></mat-divider>
+      </ng-container>
     </div>
     <div class="input-wrapper">
       <input type="text" />
