added merge params in activated route

--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav-dropdown/side-nav-dropdown.component.html
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav-dropdown/side-nav-dropdown.component.html
@@ -22,6 +22,7 @@
       routerLink="{{ item.url }}"
       routerLinkActive="active"
       [routerLinkActiveOptions]="{exact: true}"
+      queryParamsHandling="merge"
     >
       {{ item.name }}
     </div>
