--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification/notification.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification/notification.component.html
@@ -21,7 +21,7 @@
   </div>
   <div class="time">
     <mat-icon inline>schedule</mat-icon>
-    2 days ago
+    {{ notification.createdAt | timeAgo }}
   </div>
 
   <div class="background-wrapper" *ngIf="!notification.isSeen"></div>
