--- a/owner/owner-client/src/app/_components/chat/chat.component.html
+++ b/owner/owner-client/src/app/_components/chat/chat.component.html
@@ -1,5 +1,5 @@
 <div class="main-wrapper" *ngIf="chat">
-  <div class="header" matRipple [matRippleColor]="'var(--primary-light)'" (click)="isOpen = !isOpen">
+  <div class="header mat-app-background" matRipple [matRippleColor]="'var(--primary-light)'" (click)="isOpen = !isOpen">
     <div>{{ chat.name }}</div>
 
     <button type="button" mat-icon-button (click)="onClose($event)">
@@ -10,13 +10,13 @@
       height: isOpen ? '50vh' : '0',
       transition: 'height 0.5s ease-in-out'
     }">
-    <div class="message-wrapper">
+    <div class="message-wrapper mat-app-background">
       <ng-container *ngFor="let message of chat.messages">
         <app-message [message]="message"></app-message>
         <mat-divider></mat-divider>
       </ng-container>
     </div>
-    <div class="input-wrapper">
+    <div class="input-wrapper mat-app-background">
       <input type="text" />
       <button type="button" mat-icon-button color="primary">
         <mat-icon>send</mat-icon>
