Working on chats

--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/message-btn/message-btn.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/message-btn/message-btn.component.html
@@ -22,7 +22,7 @@
     </div>
     <div
       class="footer"
-      routerLink="/notifications"
+      routerLink="/chats"
       (click)="openMessages = false"
       matRipple
       [matRippleColor]="'var(--primary-light)'"
