Added button on chats on mobile design

--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
@@ -21,4 +21,8 @@
   <app-side-nav-dropdown [name]="'menus'" [itemListObj]="menusLinkItems">
     <mat-icon class="svg">menu_book</mat-icon>
   </app-side-nav-dropdown>
+
+  <app-side-nav-item [name]="'Chat'" [url]="'/chats'">
+    <mat-icon class="svg">chat</mat-icon>
+  </app-side-nav-item>
 </div>
